<resources>
    <string name="app_name">MIDI Keypad</string>
    <string name="start_button_text">Start</string>
    <string name="connect_device_text">Connect your device to your PC and from the list of options, select "MIDI"</string>
    <string name="midi_unsupported_text">Unfortunately your device does not support MIDI, and thus cannot run this application.</string>
    <string name="show_me_button_text">Show me how</string>
    <string name="title_activity_keypad">KeypadActivity</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="mode_text">Mode </string>
    <string-array name="modes">
        <item>0 (osu!) (splits screen in 2 keys)</item>
        <item>1 (osu!) (dynamic finger detection)</item>
        <item>2 (osu!mania 4K) (splits screen in 4 keys)</item>
    </string-array>
    <string name="select_mode_text">Select mode</string>
    <string name="select_midi_device_text">Select MIDI device</string>
    <string name="landscape_checkbox_text">Landscape</string>
    <string name="midi_no_devices">No MIDI devices found.</string>
    <string name="no_devices_cant_start_text">Cannot start, as there are no MIDI devices.</string>
    <string name="device_null_error_text">Error with the selected device.</string>
</resources>