<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/connect_device_text"
        android:layout_width="327dp"
        android:layout_height="34dp"
        android:text="@string/connect_device_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="401dp"
        android:layout_height="531dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect_device_text">

        <Button
            android:id="@+id/show_me_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/show_me_button_text" />

        <TextView
            android:id="@+id/select_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/select_mode_text" />

        <Spinner
            android:id="@+id/mode_spinner"
            android:layout_width="355dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />

        <CheckBox
            android:id="@+id/landscape_checkbox"
            android:layout_width="122dp"
            android:layout_height="28dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/landscape_checkbox_text" />

        <TextView
            android:id="@+id/select_midi_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/select_midi_device_text" />

        <Spinner
            android:id="@+id/device_spinner"
            android:layout_width="355dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/start_button_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>